inject custom javascript

--- a/app/views/admin/admin_website.html.erb
+++ b/app/views/admin/admin_website.html.erb
@@ -125,6 +125,11 @@
             <%= f.text_area :custom_css, rows: 3, style: "width:400px; height: 200px" %>
           </div>
 
+          <div class="field clearfix">
+            <p class="explanation">Add your own JavaScript here. Use this field to paste in scripts for analytics tracking, retargeting, etc.</p>
+            <label>Custom JavaScript</label>
+            <%= f.text_area :custom_js, rows: 3, style: "width:400px; height: 200px" %>
+          </div>
 
        </div>
       </fieldset>
